--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "joba-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -19,6 +19,7 @@
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1"
   },
