--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-jwt": "^1.2.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
